Add minor GUI imrpovements

--- a/src/app/components/login/login.component.html
+++ b/src/app/components/login/login.component.html
@@ -1,8 +1,8 @@
 <div class="container-fluid gradient">
     <div class="row">
-        <div class="col-4">
+        <div class="col-md-4 col-1">
         </div>
-        <div class="col-4 text-center">
+        <div class="col-md-4 col-10 text-center">
             <h1 class="display-1 text-secondary my-4">
                 Hanabi
             </h1>
@@ -33,7 +33,7 @@
                 </button>
             </div>
         </div>
-        <div class="col-4">
+        <div class="col-md-4 col-1">
             
         </div>
     </div>
