Do not display GUI testing buttons on login screen

--- a/src/app/components/login/login.component.html
+++ b/src/app/components/login/login.component.html
@@ -22,7 +22,7 @@
             <div class="h5 text-secondary">
                 {{ errorMessage }}
             </div>
-            <div>
+            <!-- <div>
                 <button class="btn btn-secondary btn-lg my-4" (click)="joinMockRoom()">
                     Test room GUI
                 </button>
@@ -31,7 +31,7 @@
                 <button class="btn btn-secondary btn-lg my" (click)="joinMockLobby()">
                     Test lobby GUI
                 </button>
-            </div>
+            </div> -->
         </div>
         <div class="col-md-4 col-1">
             
